# Monoworks

./: .coderabbit.yaml  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-build.yml  doxygen.yml
Docs/latex/: __fixes_8hpp_source.tex  __matrix__vectorize_8hpp_source.tex  __noise_8hpp_source.tex  __swizzle_8hpp_source.tex  __swizzle__func_8hpp_source.tex  __vectorize_8hpp_source.tex  _application_8hh_source.tex  _atomics_8h_source.tex  _backend_8hpp_source.tex  _base_8hh.tex  _base_8hh_source.tex  _capture_output_8hpp_source.tex  _connection_history_8hpp_source.tex  _custom_platform_8h_source.tex  _d3_d11___pixel_shader___advanced_8h_source.tex  _d3_d11___pixel_shader___colors_8h_source.tex  _d3_d11___pixel_shader___textures_8h_source.tex  _d3_d11___vertex_shader_8h_source.tex  _d3_d12___blit_8h_source.tex  _d3_d12___pixel_shader___advanced_8h_source.tex  _d3_d12___pixel_shader___colors_8h_source.tex  _d3_d12___pixel_shader___textures_8h_source.tex  _d3_d12___root_sig___advanced_8h_source.tex  _d3_d12___root_sig___color_8h_source.tex  _d3_d12___root_sig___texture_8h_source.tex  _d3_d12___vertex_shader___advanced_8h_source.tex  _d3_d12___vertex_shader___color_8h_source.tex  _d3_d12___vertex_shader___texture_8h_source.tex  _d3_d9___pixel_shader___palette_8h_source.tex  _d3_d9___pixel_shader___palette___linear_8h_source.tex  _d3_d9___pixel_shader___palette___nearest_8h_source.tex  _d3_d9___pixel_shader___y_u_v_8h_source.tex  _diff3_8hpp_source.tex  _diff_8hpp_source.tex  _e_g_l_2egl_8h_source.tex  _emscripten_shim_8hpp_source.tex  _filters_8hpp_source.tex  _fonts_8hpp_source.tex  _g_l_e_s_2egl_8h_source.tex  _http_request_8hpp_source.tex  (+7855 more)
MonoEditor/: CMakeLists.txt  resource.qrc
MonoEditor/source/core/: EngineBridge.cc  EngineBridge.hh  MonoEditor.cc  MonoEditor.hh
MonoEditor/source/ui/: MainWindow.cpp  MainWindow.hh  MainWindow.ui
MonoEngine/: CMakeLists.txt  Monoworks.hh  mwpch.hh
MonoEngine/source/common/: Base.hh  Events.h  Log.h  Math.hh  Memory.hh  SafeQueue.hh
MonoEngine/source/core/: Application.cc  Application.hh  CVarManager.cc  CVarManager.hh  ConfigManager.cc  ConfigManager.hh  LogManager.cc  LogManager.hh  LoggingManager.cc  LoggingManager.hh  MemoryManager.cc  MemoryManager.hh
MonoEngine/source/events/: Event.hh  EventManager.cc  EventManager.hh
MonoEngine/source/jobs/: Fibers.asm
MonoEngine/source/memory/: MemoryManager.cc  MemoryManager.hh
MonoEngine/source/renderer/: SceneRenderer.h  StaticRenderer.cc  StaticRenderer.hh
MonoEngine/source/rhi/: GraphicsAPI.h  GraphicsAPI.hh  Types.hh  Utils.hh
MonoEngine/source/rhi/agnostic/: GraphicsContext.hh  IndexBuffer.cc  IndexBuffer.hh  Presenter.hh  Texture.cc  Texture.h  Texture.hh  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cc  VertexBuffer.hh
MonoEngine/source/rhi/specific/vulkan/: VulkanContext.cpp  VulkanContext.hh  VulkanDevice.cpp  VulkanDevice.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanPresenter.hh  VulkanRenderer.cc  VulkanRenderer.hh  VulkanResourceUploader.cc  VulkanResourceUploader.hh  VulkanTexture.cc  VulkanTexture.hh  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexBuffer.cc  VulkanVertexBuffer.hh
MonoRuntime/: CMakeLists.txt
MonoRuntime/source/core/: MonoRuntime.cc  MonoRuntime.hh  Window.cc  Window.hh
MonoRuntime/source/rhi/specific/vulkan/: VulkanSDLPresenter.cc  VulkanSDLPresenter.hh
MonoRuntime/specific/sdl/: EventDispatcher.cc  EventDispatcher.hh
